feat: adiciona agenda e simplifica fluxo de chamados
